pushing responsive updates

--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-<h1>Hello Sparty</h1>
+<!DOCTYPE html>
+<html>
+<head>
+	<meta name = "viewport" content="width=device-width, initial-scale=1.0">
+<title></title>
+	<link rel="stylesheet" type="text/css" href="css/stylefromhtml.css">
+</head>
+<body>
+<div class= "one" id = "darcy">
+	<h1>Darcy</h1>
+	<p>Wings is the second studio album by South Korean boy group BTS. The album was released on October 10, 2016 and contains 15 tracks, with "Blood Sweat Tears" as its first single, and seven solo songs recorded by the members.It was selected as the "Best Kpop Album of 2016" by Billboard.</p>
+</div>
+<div class = "two">
+	<h1>Rick</h1>
+	<p>Wings is the second studio album by South Korean boy group BTS. The album was released on October 10, 2016 and contains 15 tracks, with "Blood Sweat Tears" as its first single, and seven solo songs recorded by the members. It was selected as the "Best Kpop Album of 2016" by Billboard.</p>
+</div>
+<div class = "three">
+	<h1>Karl</h1>
+	<p>Wings is the second studio album by South Korean boy group BTS. The album was released on October 10, 2016 and contains 15 tracks, with "Blood Sweat Tears" as its first single, and seven solo songs recorded by the members.It was selected as the "Best Kpop Album of 2016" by Billboard.</p>
+</div>
+
+</body>
+</html>
